--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
